# heroku-docker-haskell-test

./: Dockerfile  Main.hs  Procfile  README.md  heroku-docker-haskell-test.cabal
static/: index.html
