name:                heroku-docker-haskell-test
version:             0.1.0.0
synopsis:            Simple heroku + docker + haskell test
homepage:            https://github.com/phadej/heroku-docker-haskell-test
license:             MIT
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          oleg.grenrus@iki.fi
copyright:           (c) 2015 Oleg Grenrus
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable heroku-docker-haskell-test
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.9, waitra >=0.0.3, warp >=3.0, wai-app-static >=3.0, wai >=3.0, regex-applicative, http-types
  default-language:    Haskell2010
